upgrade to wamp2spring 4